--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ font-family: 'Noto Sans JP', sans-serif;*/
 .containerHome{
 width: 100%;
 height: 100vh;
-background-image: url("/Images/home4.jpg");
+background-image: url("./Images/home4.jpg");
 background-position: center;
 background-size: cover;
 overflow: hidden;
@@ -273,7 +273,7 @@ align-items: center;
     padding: 0%;
     margin: 0%;
     width: 50%;
-    background-image: url("/Images/home3.jpg");
+    background-image: url("./Images/home3.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -699,7 +699,7 @@ align-items: center;
     width: 50%;
 }
 .contactCard .img{
-    background-image: url("Images/home2.jpg");
+    background-image: url("../Images/home2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
