--- a/index.css
+++ b/index.css
@@ -699,7 +699,7 @@ align-items: center;
     width: 50%;
 }
 .contactCard .img{
-    background-image: url("../Images/home2.jpg");
+    background-image: url("./Images/home2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
